# rust_playground

./: README.md  clean_to_git.sh
actix_demo/: Cargo.toml  cert.pem  key.pem
actix_demo/src/: main.rs
code_organization/: Cargo.toml
code_organization/src/: lib.rs  main.rs
code_organization/src/ipv4/: inner_module.rs  mod.rs
collections_stdlib/: Cargo.toml
collections_stdlib/src/: main.rs
command_line_test/: Cargo.toml
command_line_test/src/: cmd_opts.rs  lib.rs  main.rs
enums/: Cargo.toml
enums/src/: main.rs
error_handling/: Cargo.toml
error_handling/src/: main.rs
functional_rust/: Cargo.toml
functional_rust/src/: main.rs
functions_and_variables/: Cargo.toml
functions_and_variables/src/: main.rs
guess_game/: Cargo.toml
guess_game/src/: main.rs
loops_and_flow/: Cargo.toml
loops_and_flow/src/: main.rs
ownership_and_refs/: Cargo.toml
ownership_and_refs/src/: main.rs
simple_http_server/: Cargo.toml
simple_http_server/src/: cmdline_opts.rs  http_request_handler.rs  lib.rs  main.rs  server.rs
simple_http_server/src/http_protocol/: method.rs  mod.rs  query_string.rs  request.rs  response.rs
stream_viewer/: Cargo.toml
stream_viewer/src/: cmd_opts.rs  io.rs  lib.rs  main.rs  mainwithoutthreads.old  stats.rs
structs/: Cargo.toml
structs/src/: main.rs
xml_parser/: Cargo.toml
xml_parser/dict/: test.xml
xml_parser/src/: main.rs
