[package]
name = "actix_demo"
version = "0.1.0"
authors = ["enzo <enzopoeta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web = {version = "3.3.2",features = ["openssl"]}
actix-rt = "1.1.1"
serde = "1.0.118"
env_logger = "0.8.2"
openssl = "0.10.30"
