[package]
authors = ["enzo <enzopoeta@gmail.com>"]
edition = "2018"
name = "actix_demo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-rt = "1.1.1"
actix-web = {version = "3.3.2", features = ["openssl"]}
env_logger = "0.8.2"
jsonwebtoken = "7"
openssl = "0.10.30"
serde = "1.0.118"
