[package]
name = "stream_viewer"
version = "0.1.0"
authors = ["enzo <enzopoeta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

structopt = "0.3.21"
crossbeam = {version = "0.8.0",features= []}
#{version = "3.3.2",features = ["openssl"]}
#crossbeam-channel = "0.5.0"

